--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@tiptap/react": "^2.0.0-beta.114",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "socket.io-client": "^4.5.2"
   },
   "scripts": {
     "start": "PORT=4000 BROWSER=none react-scripts start",
